<resources>
    <string name="app_name">Contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_photo">contact_photo</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="company">Company</string>
    <string name="save_changes">Save changes</string>
    <string name="null1">null</string>
</resources>